--- a/CudaMathRuntime/CudaMathRuntime.vcxproj
+++ b/CudaMathRuntime/CudaMathRuntime.vcxproj
@@ -79,6 +79,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="add_gpu.cu" />
     <CudaCompile Include="kernel.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
