--- a/CUDAConsoleApplication/CUDAConsoleApplication.vcxproj
+++ b/CUDAConsoleApplication/CUDAConsoleApplication.vcxproj
@@ -131,8 +131,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="add.cpp" />
+    <ClCompile Include="add_cpu.cpp" />
     <ClCompile Include="CUDAConsoleApplication.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
